[package]
name = "first-glitch-art"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "gaku101:first-glitch-art"

[package.metadata.component.target]
path = "../png-glitch-cli/wit"
world = "png-glitcher"
